<resources>
    <string name="app_name">Doctor Conferences</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="user_not_found_title">User Not Found!</string>
    <string name="dismiss">Dismiss</string>
    <string name="incorrect_password_title">Incorrect Password!</string>
    <string name="incorrect_password">The given password is incorrect!</string>
    <string name="cant_be_empty">This field can\'t be empty!</string>
    <string name="pwd_dont_match">Passwords don\'t match!</string>
    <string name="user_exists">User Already Exists!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="conferences_for">Conferences scheduled for</string>
    <string name="no_conferences_for">There are no scheduled conferences for</string>
    <string name="suggest_conference">Suggest Conference</string>
    <string name="subject">Conference Subject</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="suggesting_conference">Suggesting a conference for</string>
    <string name="between_0_23">Please enter a number between 0 and 23</string>
    <string name="between_1_24">Please enter a number between 1 and 24</string>
    <string name="end_must_be_after">End hour must be after start!</string>
    <string name="choose_profile_picture">Choose your profile picture:</string>
    <string name="update_info">Save Profile</string>
    <string name="logout">Logout</string>
    <string name="profile_saved">Profile Saved!</string>
    <string name="name">Name</string>
    <string name="sucess">Success!</string>
    <string name="confirmed_conferences">Confirmed</string>
    <string name="invited_conferences">Invited</string>
    <string name="suggested_conferences">Suggested</string>

</resources>
