<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.feliperrm.doctororganizer.Fragments.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@android:color/holo_blue_light"
        android:id="@+id/backgroundPicture">
        
        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/imageView"
            android:src="@drawable/profile_placeholder"
            android:layout_centerInParent="true"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:civ_border_color="#EEEEEE"
            app:civ_border_width="3dp"
            app:civ_shadow="true"
            app:civ_shadow_radius="10"
            app:civ_shadow_color="#aa000000"
            />
        
    </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="15dp"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:padding="4dp"
                android:layout_margin="15dp"
                android:textColorHint="@android:color/black"
                android:hint="@string/name"
                android:textColor="@android:color/black"
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:background="@drawable/selector_bg_edit"
                />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:textColor="@android:color/white"
            android:layout_margin="15dp"
            android:text="@string/update_info"
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:background="@android:color/transparent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/logout"
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    </ScrollView>

</LinearLayout>
